--- a/src/scss/objects/user/_common.scss
+++ b/src/scss/objects/user/_common.scss
@@ -56,6 +56,3 @@
   }
 }
 
-.pageContainer {
-  overflow-x: hidden;
-}
